# mockingjay

./: Makefile  README.md  pyproject.toml  tox.ini
notebooks/: data cleaning.ipynb  data.csv  test.csv
placebot/: cli.py  config.toml  db_conn.py  finetune.py  generate.py  get_tweets.py  process.py  tweet.py
src/mockingjay/: __init__.py  __main__.py  cli.py  db_conn.py  db_utils.py  exceptions.py  get_tweets.py  logger.py  process.py  tweet.py  twitter_conn.py  utils.py
src/mockingjay/config/: logging_config.yaml
tests/: conftest.py  test_get_tweets.py  test_mockingjay.py  test_placebot.py
