[tool.poetry]
name = "mockingjay"
version = "0.1.0"
description = "Imitate a Twitter user using LLMs"
authors = ["Evan Azevedo <me@evanazevedo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.10.0"
click = "^8.1.3"
PyYAML = "^6.0"
pandas = "^1.4.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^22.3.0"
pylint = "^2.14.4"
flake8 = "^4.0.1"
mypy = "^0.961"

[tool.poetry.scripts]
mockingjay = "mockingjay.cli:cli"

[tool.pylint."messages control"]
disable = ["no-member"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

